--- a/Ansible/linuxuser-playbook.yaml
+++ b/Ansible/linuxuser-playbook.yaml
@@ -1,8 +1,8 @@
----
--  name: Linux User with SSH
-   ansible.builtin.user:
-   name: bob
-   password: P@$$Word
-   generate_ssh_key: yes
-   ssh_key_bits: 2048
-   ssh_key_file: .ssh/id_rsa
+- hosts: util-final
+  user: deployer
+  become: true
+  vars:
+    password: $6$S2W38Fc2$8zDTu7rQtnfQmMukLnxsNR2qpwjaXiTbEIfiC7puk/MZQadaEMgFqhnEY1sGkwKT0EvioNAUREaB2txtgtLDb0
+ 
+  tasks:
+    - user: name=test3 password={{password}} shell="/bin/bash"
